--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "_args": [
     [
-      "react-bootstrap-monthrangepicker@1.1.0"
+      "react-bootstrap-monthrangepicker@1.1.1"
     ]
   ],
-  "_from": "react-bootstrap-monthrangepicker@1.1.0",
-  "_id": "react-bootstrap-monthrangepicker@1.1.0",
+  "_from": "react-bootstrap-monthrangepicker@1.1.1",
+  "_id": "react-bootstrap-monthrangepicker@1.1.1",
   "_inBundle": false,
   "_integrity": "sha1-cTPpqVmkLhi0mgrqUKSMMbiKp9g=",
   "_location": "/react-bootstrap-monthrangepicker",
@@ -13,18 +13,18 @@
   "_requested": {
     "type": "version",
     "registry": true,
-    "raw": "react-bootstrap-monthrangepicker@1.1.0",
+    "raw": "react-bootstrap-monthrangepicker@1.1.1",
     "name": "react-bootstrap-monthrangepicker",
     "escapedName": "react-bootstrap-monthrangepicker",
-    "rawSpec": "1.1.0",
+    "rawSpec": "1.1.1",
     "saveSpec": null,
-    "fetchSpec": "1.1.0"
+    "fetchSpec": "1.1.1"
   },
   "_requiredBy": [
     "/"
   ],
   "_resolved": "http://registry.npm.taobao.org/react-bootstrap-daterangepicker/download/react-bootstrap-daterangepicker-4.1.0.tgz",
-  "_spec": "1.1.0",
+  "_spec": "1.1.1",
   "author": {
     "name": "skratchdot"
   },
@@ -32,6 +32,14 @@
     "url": "https://github.com/skratchdot/react-bootstrap-daterangepicker/issues"
   },
   "description": "A date/time picker for react (using bootstrap). This is a react port of: https://github.com/dangrossman/bootstrap-daterangepicker",
+  "dependencies":{
+    "bootstrap": "*",
+    "bootstrap-monthrangepicker": "*",
+    "jquery": "*",
+    "moment": "*",
+    "prop-types": "*",
+    "react": "*"
+  },
   "devDependencies": {
     "@storybook/addon-actions": "^3.3.12",
     "@storybook/addon-info": "^3.3.12",
@@ -45,7 +53,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^3",
-    "bootstrap-monthrangepicker": "^1.1.0",
+    "bootstrap-monthrangepicker": "^1.1.1",
     "cheerio": "^0.22.0",
     "coveralls": "^3.0.0",
     "enzyme": "^3.3.0",
@@ -65,7 +73,7 @@
     "rollup": "^0.55.3",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-node-resolve": "^3.0.2",
-    "wordwrap": "^1.1.0"
+    "wordwrap": "^1.1.1"
   },
   "files": [
     "dist/"
@@ -111,5 +119,5 @@
     "watch": "npm-run-all --parallel watch:cover storybook",
     "watch:cover": "npm run cover -- --watch"
   },
-  "version": "1.1.0"
+  "version": "1.1.1"
 }
