--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "_args": [
     [
-      "react-bootstrap-monthrangepicker@1.1.3"
+      "react-bootstrap-monthrangepicker@1.1.4"
     ]
   ],
-  "_from": "react-bootstrap-monthrangepicker@1.1.3",
-  "_id": "react-bootstrap-monthrangepicker@1.1.3",
+  "_from": "react-bootstrap-monthrangepicker@1.1.4",
+  "_id": "react-bootstrap-monthrangepicker@1.1.4",
   "_inBundle": false,
   "_integrity": "sha1-cTPpqVmkLhi0mgrqUKSMMbiKp9g=",
   "_location": "/react-bootstrap-monthrangepicker",
@@ -13,25 +13,25 @@
   "_requested": {
     "type": "version",
     "registry": true,
-    "raw": "react-bootstrap-monthrangepicker@1.1.3",
+    "raw": "react-bootstrap-monthrangepicker@1.1.4",
     "name": "react-bootstrap-monthrangepicker",
     "escapedName": "react-bootstrap-monthrangepicker",
-    "rawSpec": "1.1.3",
+    "rawSpec": "1.1.4",
     "saveSpec": null,
-    "fetchSpec": "1.1.3"
+    "fetchSpec": "1.1.4"
   },
   "_requiredBy": [
     "/"
   ],
   "_resolved": "http://registry.npm.taobao.org/react-bootstrap-daterangepicker/download/react-bootstrap-daterangepicker-4.1.0.tgz",
-  "_spec": "1.1.3",
+  "_spec": "1.1.4",
   "author": {
     "name": "skratchdot"
   },
   "bugs": {
     "url": "https://github.com/skratchdot/react-bootstrap-daterangepicker/issues"
   },
-  "description": "A date/time picker for react (using bootstrap). This is a react port of: https://github.com/dangrossman/bootstrap-daterangepicker",
+  "description": "Month & Quater range picker component for Bootstrap",
   "dependencies":{
     "bootstrap": "*",
     "bootstrap-monthrangepicker": "*",
@@ -53,11 +53,11 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^3",
-    "bootstrap-monthrangepicker": "^1.1.3",
+    "bootstrap-monthrangepicker": "^1.1.4",
     "cheerio": "^0.22.0",
     "coveralls": "^3.0.0",
     "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.3",
+    "enzyme-adapter-react-16": "^1.1.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^22.1.4",
     "jquery": "^3.3.1",
@@ -73,7 +73,7 @@
     "rollup": "^0.55.3",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-node-resolve": "^3.0.2",
-    "wordwrap": "^1.1.3"
+    "wordwrap": "^1.1.4"
   },
   "files": [
     "dist/"
@@ -84,6 +84,8 @@
     "react-component",
     "bootstrap",
     "month",
+    "monthrange",
+    "monthrangepicker",
     "quarter",
     "range",
     "picker",
@@ -119,5 +121,5 @@
     "watch": "npm-run-all --parallel watch:cover storybook",
     "watch:cover": "npm run cover -- --watch"
   },
-  "version": "1.1.3"
+  "version": "1.1.4"
 }
