--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^3",
-    "bootstrap-monthrangepicker": "^1.1.4",
+    "bootstrap-monthrangepicker": "^2.0.0",
     "cheerio": "^0.22.0",
     "coveralls": "^3.0.0",
     "enzyme": "^3.3.0",
@@ -84,6 +84,7 @@
     "react-component",
     "bootstrap",
     "month",
+    "year",
     "monthrange",
     "monthrangepicker",
     "quarter",
@@ -96,7 +97,7 @@
   "main": "./dist/bundle.js",
   "name": "react-bootstrap-monthrangepicker",
   "peerDependencies": {
-    "bootstrap-monthrangepicker": "*",
+    "bootstrap-monthrangepicker": "^2.0.0",
     "jquery": "*",
     "moment": "*",
     "prop-types": "*",
